Always set event key for hash partitioning (#1372)
1. Enables per-batch key tracking when publishing.
2. Enables joins in Kafka streams on multiple partition keys.